portfolio/style.css
html {
  font-family: Poppins, sans-serif;
}

body {
  background-color: white;
  background-image: none;
}

header {
  padding: 2em;
}

#contenu {
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 40px;
  padding-bottom: 5em;
  max-width: 100vw;
  overflow: hidden;
}

#contenu h1 {
  font-size: 32px;
}

.used-tools {
  display: flex;
  flex-direction: column;
}

.used-tools span {
  display: none;
}

.tools {
  display: flex;
  align-items: center;
  column-gap: 1em;
}

.tools img {
  width: 71px;
  height: 71px;
}

.contenu__container {
  display: flex;
  flex-direction: column;
  padding: 0 13em;
}

@media screen and (max-width: 1200px) {
  .contenu__container {
    padding: 0 5em;
  }
}

@media screen and (max-width: 720px) {
  .contenu__container {
    padding: 0 1em;
  }
}

.container--small {
  width: 100%;
  align-items: center;
}

.contenu__container h2 {
  margin-bottom: 16px;
  font-size: 24px;
}

.space-left {
  margin-left: 30vw;
}

@media screen and (max-width: 720px) {
  .space-left {
    margin-left: 10vw;
  }
}

.contenu__images {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  gap: 2em;
}

@media screen and (max-width: 1200px) {
  .contenu__images {
    gap: 1em;
    justify-content: center;
  }
}

.logos {
  max-width: 80vw;
  justify-content: center;
}

.logos img {
  max-width: 80vw;
}

.cartes img {
  width: 45%;
}

.contenu__soldes .contenu__images {
  gap: 1em;
}

.contenu__images--two-layers {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.contenu__images--first-row,
.contenu__images--second-row {
  display: flex;
  justify-content: space-between;
  width: 100%;
  column-gap: 1em;
  max-width: 95vw;
}

.contenu__images img {
  width: 300px;
  height: 470px;
  object-fit: cover;
}

.contenu__images--large {
  width: auto !important;
  height: 470px !important;
  object-fit: contain !important;
  order: 2;
}

.contenu__images--medium {
  width: auto !important;
  height: 470px !important;
  object-fit: contain !important;
}

.column {
  flex-direction: column;
  row-gap: 4em;
  margin-bottom: 4em;
}

.contenu__images--full {
  width: 80vw !important;
  height: 100% !important;
}

.contenu__images--third {
  order: 3;
}

@media screen and (max-width: 1200px) {
  .contenu__images--first-row,
  .contenu__images--second-row {
    flex-wrap: wrap;
    gap: 0.5em;
  }

  .contenu__images--first {
    order: 2;
    max-width: 38vw;
  }

  .contenu__images--large {
    order: 3;
    height: auto;
    max-width: 100% !important;
    object-fit: cover !important;
  }

  .contenu__images--third,
  .contenu__images--medium {
    order: -1;
    max-width: 48vw;
  }

  .contenu__images--first-row img,
  .contenu__images--second-row img {
    height: 400px !important;
  }

  .special-row {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
    order: 1;
  }

  .special-row img {
    object-fit: cover !important;
    max-width: 31vw !important;
    height: 300px !important;
  }

  .contenu--full img {
    width: 100% !important;
    height: auto !important;
    max-width: 100% !important;
  }

  .contenu--full .contenu__images--large {
    order: -1;
  }
}

@media screen and (max-width: 700px) {
  .contenu__images
    img:not(.contenu__images--large):not(.contenu__images--medium) {
    width: 45vw !important;
  }

  .contenu__images
    .contenu__images--first-row
    img:not(.contenu__images--large):not(.contenu__images--medium),
  .contenu__images
    .contenu__images--second-row
    img:not(.contenu__images--large):not(.contenu__images--medium) {
    width: 40vw !important;
    height: auto !important;
    object-fit: cover !important;
  }

  .contenu__images--first-row .contenu__images--medium,
  .contenu__images--second-row .contenu__images--medium {
    width: 50vw !important;
    max-width: 50vw !important;
    height: auto !important;
    object-fit: cover !important;
  }

  .special-row {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
    order: 1;
  }

  .contenu__images .special-row img {
    object-fit: contain !important;
    width: 28vw !important;
    max-width: 28vw !important;
    height: 300px !important;
    max-height: 300px !important;
  }

  .contenu__images .special-row img:nth-child(2) {
    width: 36vw !important;
    max-width: 36vw !important;
  }
}

@media screen and (max-width: 400px) {
  .contenu__images
    img:not(.contenu__images--large):not(.contenu__images--medium) {
    width: 45vw !important;
  }

  .contenu__images
    .contenu__images--first-row
    img:not(.contenu__images--large):not(.contenu__images--medium),
  .contenu__images
    .contenu__images--second-row
    img:not(.contenu__images--large):not(.contenu__images--medium) {
    width: 40vw !important;
    height: auto !important;
    object-fit: cover !important;
  }

  .contenu__images .contenu__images--first-row .contenu__images--medium,
  .contenu__images .contenu__images--second-row .contenu__images--medium {
    width: 47vw !important;
    max-width: 47vw !important;
    height: auto !important;
    object-fit: cover !important;
  }

  .special-row {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
    order: 1;
  }

  .contenu__images .special-row img {
    object-fit: contain !important;
    width: 28vw !important;
    max-width: 28vw !important;
    height: 300px !important;
    max-height: 300px !important;
  }

  .contenu__images .special-row img:nth-child(2) {
    width: 36vw !important;
    max-width: 36vw !important;
  }
}

iframe {
  width: 80vw;
}

/* Autres articles */

.possibilities {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  row-gap: 4em;
  margin: 4em 0;
}

.possibilities h2 {
  font-size: 24px;
  font-weight: 300;
  text-align: center;
}

.other-articles {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  width: 60%;
  gap: 1em;
}

.article {
  width: 320px;
  height: 120px;
  position: relative;
  display: block;
}

@media screen and (max-width: 720px) {
  .other-articles {
    width: 95%;
    gap: 1em;
  }

  .article {
    width: 100%;
    overflow: hidden;
    height: 10em;
  }
}

.article img {
  width: 100%;
  aspect-ratio: 10 / 4;
  object-fit: scale-down;
  filter: brightness(0.2);
  transition: filter 200ms ease-in-out;
  background-color: white;
}

.article:hover img {
  filter: brightness(0.1);
}

.article span {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: white;
  font-size: 24px;
  text-align: center;
  width: 60%;
  line-height: 48px;
}

